# tedge-modbus-plugin

./: .gitignore  docker-compose.yml  justfile  main.py  nfpm.yaml  pyproject.toml  requirements.txt
app/: __main__.py  core.py  main.py  model.py  parser.py  registers.py  service.py  util.py
config/: groups.toml  mapping.toml  registers.csv  service.toml
modbus_reader/: __init__.py  __main__.py  core.py  model.py  mqtt.py  parser.py  service.py
packaging/: build.sh  modbus-reader.service  postinst.sh  prerm.sh  tedge-modbus-plugin.service
systemd/: tedge-modbus-plugin.service
tedge_modbus/: __main__.py  core.py  model.py  mqtt.py  parser.py  service.py
tedge_modbus/pymodbus/pymodbus-3.11.3.dist-info/: RECORD
test/: test_util.py
